--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: grid;
     grid-template-columns: 1fr 3fr / 1fr 3fr;
+    margin: auto;
 }
 
 
@@ -62,10 +63,12 @@ li {
 }
 
 .single-project {
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: grey;
-    
-    padding: 12px;
+    border-color:#38bdf8;
+    border-width: 0 0 0 7px;
+    padding: 10px;
+    border-style:solid
 }
 
 
