added buttons, worked on header

--- a/style.css
+++ b/style.css
@@ -10,8 +10,16 @@ li {
 }
 
 .header {
+    grid-column: 2;
+    grid-row: 1;
     padding: 12px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 9px;
+    grid-row-gap: 12px;
 }
+
 .sidebar {
     grid-column: 1;
     grid-row: 1/3;
@@ -26,6 +34,7 @@ li {
     padding: 12px;
     margin: 10px;
 }
+
 .sidebar .sidebar-nav {
     grid-area: 2 /1 / 3 / 2;
 }
@@ -34,41 +43,86 @@ li {
     grid: 3 / 1;
 }
 
-.sidebar  li {
+.sidebar li {
     margin: 15px 0;
 }
 
-.header {
-    grid-column: 2;
-    grid-row: 1;
+
+.searchbar {
+    grid-area: 1 / 1;
 }
+
+.user-greeting {
+    grid-area: 2 / 1;
+}
+
+.user-settings {
+    grid-area: 1 / 2;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: 20%;
+}
+
+.buttons {
+    grid-area: 2 / 2;
+    display: flex;
+    justify-content: end;
+    margin-right: 20%;
+}
+
+button {
+    box-shadow: 1px 1px 0px 0px #2563eb;
+    background-color: #2563eb;
+    border-radius: 30px;
+    border-color: #2563eb;
+
+    cursor: pointer;
+    color: #ffffff;
+
+    font-size: 17px;
+    padding: 16px 35px;
+    margin: 10px;
+    text-decoration: none;
+
+}
+
+button:hover {
+    background-color: #38bdf8;
+    border-color: #38bdf8;
+
+}
+
+
+
 
 .main-content {
     display: grid;
-    grid-template: 40px 1fr 40px 1fr / 2fr 1fr ;
-    grid-gap: 15px;
+    grid-template: 40px 1fr 40px 1fr / 2fr 1fr;
+    grid-gap: 25px;
     background-color: #dbeafe;
     gap: 20px;
     padding-left: 20px;
-    
+
 }
 
 .projects {
     display: grid;
-    gap: 8px;
-    grid-template: repeat(3, 1fr) / 1fr 1fr; 
+    gap: 18px;
+    grid-template: repeat(3, 1fr) / 1fr 1fr;
     grid-area: span 4/ 1;
-    
-    
+    margin-bottom: 20px;
+
 }
 
 .single-project {
     border-radius: 10px;
-    background-color: grey;
-    border-color:#38bdf8;
+    background-color: white;
+    border-color: #38bdf8;
     border-width: 0 0 0 7px;
     padding: 10px;
-    border-style:solid
+    border-style: solid;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.69);
 }
 
 
@@ -85,8 +139,9 @@ li {
     grid-area: 2/ 2;
     padding: 12px;
     box-shadow: 2px;
-    background-color: #38bdf8;
+    background-color: #64748b;
     border-radius: 15px;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.69);
 }
 
 #trending-header {
@@ -98,5 +153,7 @@ li {
     border-radius: 15px;
     padding: 12px;
     grid-area: 4/ 2;
-    background-color: #38bdf8;
+    background-color: #64748b;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.69);
+
 }
