added svg icons, adjusted size

--- a/style.css
+++ b/style.css
@@ -49,8 +49,17 @@ li {
 }
 
 
+
+.sidebar img {
+    width: 8%;
+}
+
 .searchbar {
     grid-area: 1 / 1;
+}
+
+.searchbar img {
+    width: 6%;
 }
 
 input[type=text] {
@@ -96,6 +105,8 @@ button {
 
 }
 
+
+
 button:hover {
     background-color: #38bdf8;
     border-color: #38bdf8;
@@ -125,6 +136,9 @@ button:hover {
 }
 
 .single-project {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     border-radius: 10px;
     background-color: white;
     border-color: #38bdf8;
@@ -132,6 +146,14 @@ button:hover {
     padding: 10px;
     border-style: solid;
     box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.69);
+}
+
+.project-nav {
+
+}
+
+.project-nav img{
+    width: 7%;
 }
 
 
