--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ li {
     grid-row-gap: 12px;
 }
 
+.header img {
+    width: 12%;
+    margin-right: 9px;
+}
 .sidebar {
     grid-column: 1;
     grid-row: 1/3;
@@ -28,7 +32,7 @@ li {
     display: grid;
     grid-template: 40px 1fr 1.5fr / 1fr;
     padding-right: 20px;
-    color: white;
+    
     font-size: 20px;
 }
 
@@ -102,14 +106,14 @@ input[type=text] {
 button {
     box-shadow: 1px 1px 0px 0px #2563eb;
     background-color: #2563eb;
-    border-radius: 30px;
+    border-radius:42px;
     border-color: #2563eb;
 
     cursor: pointer;
     color: #ffffff;
-
-    font-size: 14px;
-    padding: 16px 35px;
+    font-weight: bold;
+    font-size: 17px;
+    padding:8px 43px;
     margin: 10px;
     text-decoration: none;
 
@@ -124,7 +128,9 @@ button:hover {
 }
 
 
-
+.trend-user img {
+    width: 8%;
+}
 
 .main-content {
     display: grid;
